crates/openrouter-macros/tests/ui/parse__leading_colon.stderr
error: expected OpenRouter capability path in the form `param::name`, `input::name`, or `output::name`
 --> tests/ui/parse__leading_colon.rs:3:57
  |
3 | const MODEL: &str = model_supports!("qwen/qwen3.7-max", ::param::tools);
  |                                                         ^
